src/tests/snapshots/learn_chumsky__tests__modules__mixed.snap
---
source: src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod name {
	func testing() {}
	let this = testing();
}
---

Some(
    Spanned(
        Module {
            name: Some(
                Spanned(
                    "name",
                    4..8,
                ),
            ),
            items: [
                Spanned(
                    Func {
                        name: Spanned(
                            "testing",
                            17..24,
                        ),
                        params: [],
                        rhs: Some(
                            Spanned(
                                Block(
                                    [],
                                ),
                                27..29,
                            ),
                        ),
                    },
                    12..29,
                ),
                Spanned(
                    Binding {
                        name: Spanned(
                            "this",
                            35..39,
                        ),
                        rhs: Spanned(
                            Call(
                                Spanned(
                                    Ident("testing"),
                                    42..49,
                                ),
                                [],
                            ),
                            42..51,
                        ),
                    },
                    31..52,
                ),
            ],
        },
        0..54,
    ),
)

--- Errors ---
[]
---
