src/tests/snapshots/learn_chumsky__tests__modules__recover_block-4.snap
---
source: src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod out { mod let in_1 = 0; }
---

Some(
    Spanned(
        Module {
            name: Some(
                Spanned(
                    "out",
                    4..7,
                ),
            ),
            items: [
                Spanned(
                    Module {
                        name: None,
                        items: [],
                    },
                    10..13,
                ),
                Spanned(
                    Binding {
                        name: Spanned(
                            "in_1",
                            18..22,
                        ),
                        rhs: Spanned(
                            Int(0),
                            25..26,
                        ),
                    },
                    14..27,
                ),
            ],
        },
        0..29,
    ),
)

--- Errors ---
[
    ParseError {
        span: 14..17,
        reason: ExpectedFound {
            expected: [
                Semi,
                OpenBrace,
                Identifier,
            ],
            found: Some(
                Let,
            ),
        },
    },
]
---
