src/tests/snapshots/learn_chumsky__tests__modules__recover_block-5.snap
---
source: src/tests/modules.rs
expression: "&snapshot"
---
--- Input ---
mod out { mod lvl_1 { mod lvl_2 { let in_3 = 0; }   mod lvl_2   let in_2 = 0; } }
---

Some(
    Spanned(
        Module {
            name: Some(
                Spanned(
                    "out",
                    4..7,
                ),
            ),
            items: [
                Spanned(
                    Module {
                        name: Some(
                            Spanned(
                                "lvl_1",
                                14..19,
                            ),
                        ),
                        items: [
                            Spanned(
                                Module {
                                    name: Some(
                                        Spanned(
                                            "lvl_2",
                                            26..31,
                                        ),
                                    ),
                                    items: [
                                        Spanned(
                                            Binding {
                                                name: Spanned(
                                                    "in_3",
                                                    38..42,
                                                ),
                                                rhs: Spanned(
                                                    Int(0),
                                                    45..46,
                                                ),
                                            },
                                            34..47,
                                        ),
                                    ],
                                },
                                22..49,
                            ),
                            Spanned(
                                Module {
                                    name: Some(
                                        Spanned(
                                            "lvl_2",
                                            56..61,
                                        ),
                                    ),
                                    items: [],
                                },
                                52..61,
                            ),
                            Spanned(
                                Binding {
                                    name: Spanned(
                                        "in_2",
                                        68..72,
                                    ),
                                    rhs: Spanned(
                                        Int(0),
                                        75..76,
                                    ),
                                },
                                64..77,
                            ),
                        ],
                    },
                    10..79,
                ),
            ],
        },
        0..81,
    ),
)

--- Errors ---
[
    ParseError {
        span: 64..67,
        reason: ExpectedFound {
            expected: [
                Semi,
                OpenBrace,
            ],
            found: Some(
                Let,
            ),
        },
    },
]
---
